@@ -22,6 +22,8 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Rework keyring hooks in Dpkg::Vendor. Deprecate the keyrings hook, and
       add package-keyrings, archive-keyrings and archive-keyrings-historic
       hooks. Prompted by Johannes Schauer <josch@debian.org>.
+    - Make the Dpkg::Substavars parse() method return the number of substvars
+      parsed.
   * Packaging:
     - Add liblocale-gettext-perl to libdpkg-perl Recommends.
     - Wrap and document dependency relationships.
